--- a/referentiel.html
+++ b/referentiel.html
@@ -37,8 +37,10 @@
     <tbody>
         <tr>
             <td>Gérer le patrimoine informatique</td>
-            <td>- Cours systèmes et réseaux : vérification et modification des droits utilisateurs
-                - Cours systèmes et réseaux : mise en place d'un système de sauvegarde sur la VM
+            <td>- Cours systèmes et réseaux : vérification et modification des droits utilisateurs, <br>
+                 mise en place d'un système de sauvegarde sur la VM <br>
+                - Cours Base de données: Exploitation de données à l’aide d’un langage de requêtes, <br>
+                Conception ou adaptation d’une base de données, Administration et déploiement d’un base de données
             </td>
         </tr>
 
