--- a/referentiel.html
+++ b/referentiel.html
@@ -46,7 +46,10 @@
 
         <tr>
             <td>Répondre aux incidents et aux demandes d’assistance et d’évolution</td>
-            <td>- Projet Personnel Encadré : correction du code lors d'erreurs relevées</td>
+            <td>- Projet Personnel Encadré : correction du code lors d'erreurs relevées <br>
+                <a href = "https://github.com/BTS-SIO-2021/ppe-react" target="_blank"> code </a>
+            </td> 
+            
         </tr>
 
         <tr>
@@ -130,6 +133,11 @@
             <td>
             - Participation au CTF (challenges quotidiens) dans le cadre du calendrier de l'avent OCD
             </td>
+        </tr>
+
+        <tr>
+            <td> Lien vers Annexe 6.1 - Tableau de synthèse</td>
+            <td>- <a href = "IMAGES/Solene_PAULIN_6_-_annexe_6.1_-_tableau_de_synthese_-_epreuve_E4_-_BTS_SIO_2022 (4)[361].pdf" target="_blank"> tableau </a> </td> 
         </tr>
     </tbody>
 </table>
