--- a/realisationspro.html
+++ b/realisationspro.html
@@ -65,44 +65,42 @@
         </tr>
         <tr>
             <td>Utilisation du langage Python et des librairies externes</td>
-            <td>- Développement d'une API Web (Flask) destinée à la gestion des utilisateurs: 
-                formulaire d'enregistrement, connexion via un username et un mot de passe via: 
-                    - base de données SQLITE
-                    - exploitation du standard REST (GET pour récupérer de la
-                    donnée, POST pour envoyer ou créer de la donnée)
+            <td>- Développement d'une API Web (Flask) destinée à la gestion des utilisateurs: <br>
+                formulaire d'enregistrement, connexion via un username et un mot de passe via: <br>
+                    - base de données SQLITE <br>
                     - récupération des arguments de requêtes et
-                    stockage dans la BD
-                    - affichage des données sur le navigateur
-                    - SMTP (pour envoi du token par mail à l’utilisateur)
-                - Correction des erreurs soulevées par le code
-                - <a href = "https://github.com/Solenepln/API-USER-MANAGEMENT.git" target="_blank">code</a>
+                    stockage dans la BD <br>
+                    - affichage des données sur le navigateur <br>
+                    - SMTP (pour envoi du token par mail à l’utilisateur) <br>
+                    - Correction des erreurs soulevées par le code <br>
+                    - <a href = "https://github.com/Solenepln/API-USER-MANAGEMENT.git" target="_blank">code</a>
             </td>
         </tr>
         <tr>
             <td>Concept de sécurité</td>
-            <td>- Concept de l’OTP (one time password)
+            <td>- Concept de l’OTP (one time password) <br>
                 - Génération unique d’un token, gestion du timelife et re-gé nération/suppression si temps dépassé →
-                authentification multiple facteurs
-                - Gestion de l’ouverture/fermeture d’une session
-                - Restriction d’accès à certains contenus de l’API
+                authentification multiple facteurs <br>
+                - Gestion de l’ouverture/fermeture d’une session <br>
+                - Restriction d’accès à certains contenus de l’API <br>
                 - Stockage du mot de passe hashé
             </td>
         </tr>
         <tr>
             <td>Refactor de code</td>
-            <td>- Refactor du code: flaskrestX
+            <td>- Refactor du code <br>
                 - Amélioration des routes</td>
         </tr>
         <tr>
             <td>Compréhension du modèle MVC</td>
-            <td>- Compréhension de l’intérêt du MVC
+            <td>- Compréhension de l’intérêt du MVC <br>
                 - Refactor du code en MVC permettant la séparation des usages
             </td>
         </tr>
         <tr>
             <td>Processus de développement</td>
-            <td>- Compréhension du principe de versionning
-                - Principe des branches (principale = production , développement = ajout de nouvelles fonctionnalités, features)
+            <td>- Compréhension du principe de versionning <br>
+                - Principe des branches (principale = production , développement = ajout de nouvelles fonctionnalités, features) <br>
                 - Merge
             </td>
         </tr>
