--- a/referentiel.html
+++ b/referentiel.html
@@ -71,6 +71,23 @@
         </tr>
 
         <tr>
+            <td> Organiser son développement professionnel : Mettre en place son environnement d'apprentissage personnel</td>
+            <td>- Travail de recherche quotidien dans le cadre de la rédaction du code(Stack Overflow, docs Python etc.) </td> 
+        </tr>
+
+        <tr>
+            <td>
+            Organiser son développement professionnel: Mettre en oeuvre des outils et stratégies de veille informationnelle <br>
+            + Mettre en place son environnement d'apprentissage personnel <br>
+            + Sensibilisation à la Cybersécurité
+            </td>
+
+            <td>
+            - Participation au CTF (challenges quotidiens) dans le cadre du calendrier de l'avent OCD
+            </td>
+        </tr>
+
+        <tr>
         <td>Concevoir et développer une solution applicative</td>
             <td>- Développement d'une API destinée à la gestion des utilisateurs : <li><a href = "https://github.com/Solenepln/API-USER-MANAGEMENT.git" target="_blank">code</a></li><br>
             - Ajout de features à l'API <br>
@@ -80,7 +97,7 @@
         <tr>
             <td>Concevoir et développer une solution applicative:
                 Exploiter les ressources du cade applicatif (frawework)</td>
-            <td>- Initialisation au framework Flask dans le cadre de l'API</td>
+            <td>- Initialisation au micro framework Flask dans le cadre de l'API</td>
         </tr>
 
         <tr>
@@ -116,23 +133,6 @@
             développement. Sécurisation des données (hashage des mdp stockés)
         </td>
         <td>- Découverte du MFA et mise en place au sein de l'API</td>
-        </tr>
-
-        <tr>
-            <td> Organiser son développement professionnel : Mettre en place son environnement d'apprentissage personnel</td>
-            <td>- Travail de recherche quotidien dans le cadre de la rédaction du code(Stack Overflow, docs Python etc.) </td> 
-        </tr>
-
-        <tr>
-            <td>
-            Organiser son développement professionnel: Mettre en oeuvre des outils et stratégies de veille informationnelle <br>
-            + Mettre en place son environnement d'apprentissage personnel <br>
-            + Sensibilisation à la Cybersécurité
-            </td>
-
-            <td>
-            - Participation au CTF (challenges quotidiens) dans le cadre du calendrier de l'avent OCD
-            </td>
         </tr>
 
         <tr>
